Change set a min-height for body to prevent overflow

--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 body {
   background-color: #eee;
   display: flex;
-  height: 98%;
+  min-height: 100vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-y: visible;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
